# notify-service

./: .env.template  .flake8  .gitignore  Makefile  README.md  docker-compose.celery.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  variety_code_checker.yaml
docs/: readme.md
docs/database/: Movies Arch.drawio
infra/backend/: Dockerfile
infra/backend-test/: Dockerfile
infra/celery/: Dockerfile
infra/nginx/configs/: site.conf
infra/scheduler/: Dockerfile
scheduler/: Dockerfile  event_checker.py  main.py  requirements.txt  schemas.py
scheduler/core/: config.py
scheduler/storage/: events.py
src/: .env.template  .env.test  alembic.ini  gunicorn.conf.py
src/app/: main.py
src/app/api/admin_panel/: main.py
src/app/api/routers/: __init__.py  main.py
src/app/core/: config.py  logger.py
src/app/core/exceptions/: auth.py  base.py  events.py
src/app/dependencies/: auth.py  main.py  settings.py
src/app/middleware/: main.py  request_id.py  request_log.py
src/app/models/: __init__.py  base.py  mixins.py  notification.py  schedule.py  sender.py  template.py  wrapper.py
src/app/providers/: __init__.py  admin_provider.py  ampq_provider.py  celery_provider.py  main.py  pg_providers.py  sentry_provider.py
src/app/repositories/: events.py  templates.py
src/app/schemas/: template.py
src/app/schemas/request/: events.py
src/app/services/: __init__.py  auth.py  events.py  queue_notify.py  status.py  templates.py
src/app/wrappers/: __init__.py
src/celery_worker/: config.py  connectors.py  main.py
src/celery_worker/backend/: __init__.py  notify.py
src/celery_worker/exceptions/: base.py  events.py  handlers.py
src/celery_worker/handlers/: __init__.py  handlers_factory.py  main.py  ws_handler.py
src/celery_worker/repositories/: __init__.py  templates.py
src/celery_worker/schemas/: content.py  users.py
src/celery_worker/services/: __init__.py  content_service.py  notify.py
src/celery_worker/tasks/: __init__.py  debug.py  notifications.py  template.py
src/celery_worker/utils/: __init__.py  content_service.py  handlers_factory.py  url_shortener.py  users_service.py
src/migrations/: env.py
src/migrations/versions/: 2023-09-01_21-32_init.py  2023-09-04_17-39_add_template_type.py  2023-09-08_17-41_add_sender_template_wrapper_data.py
src/scheduler/: .env.template  event_sender.py  main.py  requirements.txt  schemas.py  utils.py
src/scheduler/core/: config.py  logger.py
src/scheduler/storage/: events.py
src/shared/config/: celery_config.py
src/shared/dto/: base.py  templates.py
src/shared/enums/: events.py  notifications.py  queues.py
src/shared/exceptions/: base.py
src/shared/schemas/: events.py  notification.py
src/shared/types/: events.py
src/tests/: conftest.py
src/tests/app/: conftest.py
(+54 files in other folders)
