[tool.poetry]
name = "notify-service"
version = "0.1.0"
description = "Notify Service"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "notify_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
orjson = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
