[tool.poetry]
name = "notify-service"
version = "0.1.0"
description = "Notify Service"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "notify_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
orjson = "^3.9.5"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"
flake8-bandit = "^4.1.1"
flake8-print = "^5.0.0"
flake8-commas = "^2.1.0"
flake8-bugbear = "^23.7.10"
flake8-broken-line = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
