[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["src/app", "src/celery_worker", "src/scheduler", "src/shared"]
skip = ["src/migrations"]

[tool.poetry]
name = "notify-service"
version = "0.1.0"
description = "Notify Service"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "notify_service" }]

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
fastapi = "^0.103.0"
pydantic = { extras = ["email"], version = "^2.3.0" }
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
orjson = "^3.9.5"
celery = "^5.3.1"
sqlalchemy = "^2.0.20"
psycopg = { extras = ["binary"], version = "^3.1.10" }
alembic = "^1.12.0"
sqladmin = "^0.14.1"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
requests = "^2.31.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
websockets = "^11.0.3"
pyjwt = "^2.8.0"
aio-pika = "^9.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
bandit = "^1.7.5"
mypy = "^1.4.1"
flake8-bandit = "^4.1.1"
flake8-print = "^5.0.0"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^23.7.10"
flake8-commas = "^2.1.0"
pre-commit = "^3.3.3"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"
black = "^23.7.0"
isort = "^5.12.0"
types-redis = "^4.6.0.3"
motor-types = "^1.0.0b2"
flake8-html = "^0.4.3"
types-croniter = "^1.4.0.1"
types-requests = "^2.31.0.2"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
faker = "^19.4.0"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
